# sentence-reader

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  compose.yaml  package.json
deploy/: Caddyfile.example  sentence-reader.service
main/: .gitignore  CMakeLists.txt
main/data/: vocab.txt  vocab2.txt
main/include/sentence-reader/: Earley.h  Grammar.h  Lexicon.h  Parser.h  Rule.h  SyntaxTree.h  Util.h
main/language-data/english/grammar/: MakeGrammar.txt
main/language-data/english/grammar/adjectives/: adjectives.txt
main/language-data/english/grammar/adverbs/: adverbs.txt
main/language-data/english/grammar/nouns/: nouns.txt
main/language-data/english/grammar/toplevel/: main.txt  misc.txt
main/language-data/english/grammar/verbs/: verbs.txt
main/src/: Earley.cpp  Grammar.cpp  Lexicon.cpp  Parser.cpp  Rule.cpp  SyntaxTree.cpp  main.cpp
web/: server.mjs
web/public/: about.html  app.js  index.html  reference.html  reference.js  styles.css
